# project-mimic

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  FULL_BROWSER_AUTOMATION_TODO.md  Makefile  PROJECT_DETAILED_OVERVIEW.md  PROJECT_TODO_100.md  PROJECT_TODO_GAP_60.md  README.md  WORKFLOW_RULES.md  benchmark.py  inference.py  openenv.yaml  pyproject.toml
.github/: CODEOWNERS  TRIAGE_POLICY.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  incident.yml
.github/workflows/: browser-worker-e2e.yml  canary-rollback.yml  ci.yml  cluster-chaos.yml  container-signing.yml  data-deletion.yml  deployment-policy.yml  disaster-recovery.yml  flaky-detection.yml  performance-gates.yml  runbook-automation.yml  secret-rotation.yml  slo-burn-rate-alerts.yml  triton-gpu-integration.yml
artifacts/: canary-slo.json  slo-burn-rate.json
browser-worker/: Dockerfile  package-lock.json  package.json
browser-worker/src/: config.js  index.js  playwright-emitter.js  server.js  sidecar-client.js
browser-worker/tests/: server.test.js
config/: data-deletion.yml  disaster-recovery.yml  performance-thresholds.yml  secret-rotation.yml  slo-alerts.yml
deploy/k8s/: browser-worker.yaml  (+7 more)
rust/mimetic/: Cargo.toml  Dockerfile
rust/mimetic/src/: lib.rs  sidecar.rs
rust/mimetic/tests/: mimetic_tests.rs  sidecar_contract.rs
tests/: test_action_state_machine.py  test_api.py  test_api_grpc_parity.py  test_artifact_fallback.py  test_artifacts.py  test_async_jobs_api.py  test_audit_export.py  test_autonomous_remediation_api.py  test_baseline.py  test_baseline_snapshot.py  test_behavior_tree.py  test_benchmark_lab_api.py  test_benchmarking.py  test_billing_primitives_api.py  test_browser_worker_cross_engine_parity.py  test_browser_worker_e2e_workflow.py  test_canary_rollback.py  test_cluster_chaos.py  test_cluster_chaos_workflow.py  test_cost_aware_scheduler_api.py  test_cost_observability_api.py  test_data_deletion.py  test_data_residency_api.py  test_decision_orchestrator.py  test_decision_orchestrator_mutation_guards.py  test_docs_validation.py  test_drift_detection_api.py  test_environment.py  test_ephemeral_services.py  test_event_stream_api.py  test_execution_engine.py  test_feature_flags_api.py  test_flaky_detection.py  test_governance_approval_api.py  test_governance_controls_api.py  test_grpc_runtime.py  test_helm_overlays.py  test_identity.py  test_identity_federation_api.py  test_inference_script.py  (+46 more)
(+205 files in other folders)
