[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mimic"
version = "0.1.0"
description = "Distributed vision-based user emulation engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
project-mimic-ops = "project_mimic.ops_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
