[package]
name = "mimetic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust mimetic interaction primitives for Project Mimic"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "mimetic"
path = "src/lib.rs"

[[bin]]
name = "mimetic-sidecar"
path = "src/bin/mimetic_sidecar.rs"
